bdr.BDR.scala.error
Erreur de compilation :
BDR:1: error: Missing closing brace `}' assumed here
var lettre : String = ""
^BDR:1: error: Missing closing brace `}' assumed here
var lettre : String = ""
^BDR:1: error: expected class or object definition
var lettre : String = ""
^BDR:2: error: expected class or object definition
while (estSurMessage()) {
^BDR:27: error: Missing closing brace `}' assumed here
      }
      ^